@@ -3,20 +3,21 @@ the constituent solvers, that should be installed separately.
 However, sunny-cp provides utilities for adding the installed solvers to its 
 portfolio and for customizing their settings.
 
-Let us suppose that we want to install a solver called <SOLVER>. The 
-suggested procedure *before the sunny-cp installation* is to:
+Let us suppose that we want to install a solver called <SOLVER> and that 
+<SUNNY_HOME> is the root folder of sunny-cp. The suggested procedure *before 
+installing sunny-cp* is to:
 
- 1. create a corresponding folder: SUNNY_HOME/solvers/<SOLVER>
+ 1. create a corresponding folder: <SUNNY_HOME>/solvers/<SOLVER>
   
- 2. create a folder SUNNY_HOME/solvers/<SOLVER>/mzn-lib which contains the 
+ 2. create a folder <SUNNY_HOME>/solvers/<SOLVER>/mzn-lib which contains the 
     solver-specific redefinitions of the MiniZinc global constraints
     (also a symbolic link to another folder is fine)
     
- 3. create an executable file SUNNY_HOME/solvers/<SOLVER>/fzn-exec which invokes 
+ 3. create an executable file <SUNNY_HOME>/solvers/<SOLVER>/fzn-exec which invokes 
     the command used by <SOLVER> to execute its FlatZinc interpreter
     (also a symbolic link to another executable is fine)
     
- 4. create a text file SUNNY_HOME/solvers/<SOLVER>/opts which contains two lines
+ 4. create a text file <SUNNY_HOME>/solvers/<SOLVER>/opts which contains two lines
     of the form:
       all_opt = '<OPTION>'
       free_opt = '<OPTION>'
@@ -28,15 +29,15 @@ suggested procedure *before the sunny-cp installation* is to:
     Note that OPTION can also be empty; e.g., if a solver always ignores the 
     search annotations then just set free_opt = ''
     
- 4. run the SUNNY_HOME/install.sh script for checking <SOLVER> installation
+ 4. run the <SUNNY_HOME>/install.sh script for checking <SOLVER> installation
   
 If this procedure succeeds, the following code will be added to the file 
-SUNNY_HOME/src/pfolio_solvers.py:
+<SUNNY_HOME>/src/pfolio_solvers.py:
 
   <SOLVER> = Solver()
   <SOLVER>.name = '<SOLVER>'
-  <SOLVER>.mznlib = 'SUNNY_HOME/solvers/<SOLVER>/mzn-lib'
-  <SOLVER>.fzn_exec = 'SUNNY_HOME/solvers/<SOLVER>/fzn-exec'
+  <SOLVER>.mznlib = '<SUNNY_HOME>/solvers/<SOLVER>/mzn-lib'
+  <SOLVER>.fzn_exec = '<SUNNY_HOME>/solvers/<SOLVER>/fzn-exec'
   <SOLVER>.constraint = <SOLVER> redefinition of the constraint LHS < RHS
   <SOLVER>.all_opt = <SOLVER> option string for printing all the solutions
   <SOLVER>.free_opt = <SOLVER> option string for free search
@@ -44,11 +45,11 @@ SUNNY_HOME/src/pfolio_solvers.py:
 In this way, <SOLVER> object becomes part of the sources and usable by sunny-cp 
 for the <SOLVER> execution. Note that once <SOLVER> is installed, it is however 
 possible to modify its settings by manipulating the corresponding parameters in 
-SUNNY_HOME/src/pfolio_solvers.py
+<SUNNY_HOME>/src/pfolio_solvers.py
 Actually, sunny-cp already comes with the folders corresponding to the built-in 
 solvers of MiniZinc 2.0, namely: g12cbc, g12fd, and g12lazyfd.
 Moreover, a (new) solver can be added, modified, or removed even after the 
 sunny-cp installation: it is enough to follow the above steps 1-3 and then run 
-the python script SUNNY_HOME/solvers/make_pfolio.py in place of step 4 (for 
+the python script <SUNNY_HOME>/solvers/make_pfolio.py in place of step 4 (for 
 avoiding the recompilation of all the other sources).
 Finally, note that all the solvers must have unique names.
